- Frontend
Add:
* Finalizacão do front
* Correcão de erros do backend